UI merging in progress

--- a/PiwotDrawingLib/PiwotDrawingLib.csproj
+++ b/PiwotDrawingLib/PiwotDrawingLib.csproj
@@ -60,14 +60,20 @@
     <Compile Include="Rendering\Renderer.cs" />
     <Compile Include="Rendering\Requests\RenderRequest.cs" />
     <Compile Include="Rendering\Requests\TimedTextRequest.cs" />
+    <Compile Include="UI\Controls\ActionControl.cs" />
     <Compile Include="UI\Containers\Menu.cs" />
+    <Compile Include="UI\Controls\ButtonControl.cs" />
     <Compile Include="UI\Controls\CheckBoxControl.cs" />
     <Compile Include="UI\Controls\IntSwitcherControl.cs" />
     <Compile Include="UI\Controls\LabelControl.cs" />
     <Compile Include="UI\Controls\LineSeparatorControl.cs" />
     <Compile Include="UI\Controls\MenuControl.cs" />
+    <Compile Include="UI\Controls\Pressable.cs" />
     <Compile Include="UI\Controls\StringSwitcherControl.cs" />
+    <Compile Include="UI\Controls\Switchable.cs" />
     <Compile Include="UI\Controls\SwitcherControl.cs" />
+    <Compile Include="UI\Events\ButtonEvent.cs" />
+    <Compile Include="UI\Events\CheckBoxEvent.cs" />
     <Compile Include="UI\Events\IntSwitcherEvent.cs" />
     <Compile Include="UI\Events\MenuBindingEvent.cs" />
     <Compile Include="UI\Events\MenuControllEvent.cs" />
