--- a/PiwotDrawingLib/PiwotDrawingLib.csproj
+++ b/PiwotDrawingLib/PiwotDrawingLib.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Rendering\Renderer.cs" />
     <Compile Include="Rendering\Requests\RenderRequest.cs" />
     <Compile Include="Rendering\Requests\TimedTextRequest.cs" />
+    <Compile Include="UI\Containers\Canvas_Legacy.cs" />
     <Compile Include="UI\Containers\Canvas.cs" />
     <Compile Include="UI\Containers\Container.cs" />
     <Compile Include="UI\Containers\FunctionDisplay.cs" />
