--- a/PiwotDrawingLib/PiwotDrawingLib.csproj
+++ b/PiwotDrawingLib/PiwotDrawingLib.csproj
@@ -54,13 +54,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drawing\Renderer.cs" />
+    <Compile Include="Drawing\Exceptions\InvalidWindowSizeException.cs" />
     <Compile Include="Misc\Boxes.cs" />
     <Compile Include="Misc\Rend_test.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Drawing\Renderer.cs" />
-    <Compile Include="Drawing\Requests\RenderRequest.cs" />
-    <Compile Include="Drawing\Requests\TimedTextRequest.cs" />
+    <Compile Include="Drawing\Renderer_Legacy.cs" />
     <Compile Include="UI\Containers\Canvas_Legacy.cs" />
     <Compile Include="UI\Containers\Canvas.cs" />
     <Compile Include="UI\Containers\Container.cs" />
