--- a/PiwotDrawingLib/PiwotDrawingLib.csproj
+++ b/PiwotDrawingLib/PiwotDrawingLib.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6F9DEA25-53FB-4D41-9EF3-2FCBC71D23B2}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>PiwotDrawingLib</RootNamespace>
     <AssemblyName>PiwotDrawingLib</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Drawing\DrawingRequest.cs" />
+    <Compile Include="Drawing\Exceptions\InvalidCanvasSizeException.cs" />
     <Compile Include="Drawing\Renderer.cs" />
     <Compile Include="Drawing\Exceptions\InvalidWindowSizeException.cs" />
     <Compile Include="Misc\Boxes.cs" />
@@ -64,7 +65,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Containers\Canvas_Legacy.cs" />
-    <Compile Include="UI\Containers\Canvas.cs" />
+    <Compile Include="Drawing\Canvas.cs" />
     <Compile Include="UI\Containers\Container.cs" />
     <Compile Include="UI\Containers\PictureBox.cs" />
     <Compile Include="UI\Containers\ScrollContainer.cs" />
